--- a/source/css/components/quire-figure.scss
+++ b/source/css/components/quire-figure.scss
@@ -22,7 +22,7 @@
   border-top: 1px solid $accent-color;
   border-bottom: 1px solid $accent-color;
   padding: 1em 0;
-  margin-top: 0.5em !important;
+  margin-top: 0.5em;
   margin-left: 0 !important;
   margin-right: 0 !important;
 
